--- a/src/main/resources/templates/login_register.html
+++ b/src/main/resources/templates/login_register.html
@@ -114,78 +114,74 @@
     <div class="container d-flex flex-wrap" style="max-width: 1200px;">
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
             <h2 class="m-3">登入</h2>
-            <form class="appointment">
-                <div class="row">
+            <div class="row">
+                <div class="col-md-12">
                     <div class="col-md-12">
-                        <div class="col-md-12">
-                            <div class="form-group d-flex">
-                                <span class="fa-icon"><i class="fa fa-envelope-o fa-2x"></i></span>
-                                <input id="loginEmail" type="email" class="form-control" placeholder="電子郵件"
-                                       onchange="judgeLoginEmail(this.id)">
-                                <b id="loginPromptEmail"></b>
-                            </div>
+                        <div class="form-group d-flex">
+                            <span class="fa-icon"><i class="fa fa-envelope-o fa-2x"></i></span>
+                            <input id="loginEmail" type="email" class="form-control" placeholder="電子郵件"
+                                   onchange="judgeLoginEmail(this.id)">
+                            <b id="loginPromptEmail"></b>
                         </div>
-                        <div class="col-md-12">
-                            <div class="form-group d-flex">
-                                <span class="fa-icon"><i class="fa fa-key fa-2x"></i></span>
-                                <input id="loginPassword" type="password" class="form-control" placeholder="密碼">
-                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group d-flex">
+                            <span class="fa-icon"><i class="fa fa-key fa-2x"></i></span>
+                            <input id="loginPassword" type="password" class="form-control" placeholder="密碼">
                         </div>
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <button id="loginBtn" onclick="login()" class="btn btn-primary py-3 px-4">登入</button>
-                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <button id="loginBtn" onclick="login()" class="form-control btn btn-primary py-1 px-4">登入</button>
                         </div>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
         <div class="col-md-12 col-lg-6 half p-5 ftco-animate">
             <h2 id="registStatus" class="m-3">註冊</h2>
-            <form class="appointment">
-                <div class="row">
+            <div class="row">
+                <div class="col-md-12">
                     <div class="col-md-12">
-                        <div class="col-md-12">
-                            <div class="form-group d-flex">
-                                <span class="fa-icon"><i class="fa fa-envelope-o fa-2x"></i></span>
-                                <input id="emailAjax" type="email" class="form-control" placeholder="電子郵件"
-                                       onchange="judgeRegisterEmail(this.id)" required/>
-                                <b id="promptEmail"></b>
-                            </div>
+                        <div class="form-group d-flex">
+                            <span class="fa-icon"><i class="fa fa-envelope-o fa-2x"></i></span>
+                            <input id="emailAjax" type="email" class="form-control" placeholder="電子郵件"
+                                   onchange="judgeRegisterEmail(this.id)" required/>
+                            <b id="promptEmail"></b>
                         </div>
-                        <div class="col-md-12">
-                            <div class="form-group d-flex">
-                                <span class="fa-icon"><i class="fa fa-key fa-2x"></i></span>
-                                <input id="passwordAjax" type="password" class="form-control" placeholder="密碼">
-                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group d-flex">
+                            <span class="fa-icon"><i class="fa fa-key fa-2x"></i></span>
+                            <input id="passwordAjax" type="password" class="form-control" placeholder="密碼">
                         </div>
-                        <div class="col-md-12">
-                            <div class="form-group d-flex">
-                                <span class="fa-icon"><i class="fa fa-user-o fa-2x"></i></span>
-                                <input id="nameAjax" type="text" class="form-control" placeholder="姓名">
-                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group d-flex">
+                            <span class="fa-icon"><i class="fa fa-user-o fa-2x"></i></span>
+                            <input id="nameAjax" type="text" class="form-control" placeholder="姓名">
                         </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <input id="genderAjax" type="text" class="form-control" placeholder="性別">
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input id="genderAjax" type="text" class="form-control" placeholder="性別">
 
-                            </div>
                         </div>
-                        <div class="col-md-12">
-                            <div class="form-group d-flex">
-                                <span class="fa-icon"><i class="fa fa-phone fa-2x"></i></span>
-                                <input id="telAjax" type="tel" class="form-control" placeholder="聯絡電話">
-                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group d-flex">
+                            <span class="fa-icon"><i class="fa fa-phone fa-2x"></i></span>
+                            <input id="telAjax" type="tel" class="form-control" placeholder="聯絡電話">
                         </div>
-                        <div class="col-md-12">
-                            <div class="form-group">
-                                <button id="registBtn" onclick="register()" class="btn btn-primary py-3 px-4">註冊
-                                </button>
-                            </div>
+                    </div>
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <button id="registBtn" onclick="register()" class="form-control btn btn-primary py-1 px-4">註冊
+                            </button>
                         </div>
                     </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
 </section>
