一般領養 js優化 + 彈出詳細視窗

--- a/src/main/resources/templates/personal_shelter.html
+++ b/src/main/resources/templates/personal_shelter.html
@@ -5,7 +5,6 @@
     <script>
 
 
-
     </script>
     <title>一般領養 -寵物資訊平台</title>
     <meta charset="utf-8">
@@ -102,70 +101,66 @@
     </div>
 </section>
 
-<!-- Modal -->
-<!--<div class="modal-body">-->
-<!--    <div class="container-fluid">-->
-<!--        <div class="row">-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog"-->
-<!--     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">-->
-<!--    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">-->
-<!--        <div class="modal-content">-->
-<!--&lt;!&ndash;            <div class="modal-header">&ndash;&gt;-->
-<!--&lt;!&ndash;                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>&ndash;&gt;-->
-<!--&lt;!&ndash;                <button type="button" class="close" data-dismiss="modal" aria-label="Close">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <span aria-hidden="true">&times;</span>&ndash;&gt;-->
-<!--&lt;!&ndash;                </button>&ndash;&gt;-->
-<!--&lt;!&ndash;            </div>&ndash;&gt;-->
-<!--&lt;!&ndash;            <div class="modal-body">&ndash;&gt;-->
-<!--&lt;!&ndash;                <div class="form-group">&ndash;&gt;-->
-<!--&lt;!&ndash;                    <div class="media media-events-list bg-info">&ndash;&gt;-->
-<!--&lt;!&ndash;                        <a class="media-img">&ndash;&gt;-->
-<!--&lt;!&ndash;                            <img id="imageUrl_static" src="">&ndash;&gt;-->
-<!--&lt;!&ndash;                        </a>&ndash;&gt;-->
-<!--&lt;!&ndash;                        <div class="media-body">&ndash;&gt;-->
-<!--&lt;!&ndash;                            <h3 class="media-heading mt-3 mb-2 ml-3">&ndash;&gt;-->
-<!--&lt;!&ndash;                                <a class="text-white text-capitalize d-block text-truncate" id="animalId_static"></a>&ndash;&gt;-->
-<!--&lt;!&ndash;                            </h3>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <ul class="text-white list-unstyled mb-2">&ndash;&gt;-->
-<!--&lt;!&ndash;                                <il id="animalKind_static"></il>&ndash;&gt;-->
-<!--&lt;!&ndash;                            </ul>&ndash;&gt;-->
-<!--&lt;!&ndash;                            <p id="description_static"></p>&ndash;&gt;-->
-<!--&lt;!&ndash;                        </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                    </div>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                        <div class="col">&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <img id="imageUrl_static" src="">&ndash;&gt;-->
-<!--                    &lt;!&ndash;                        </div>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                        <div class="col">&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">編號 :</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalId_static1"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">物種 :</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalKind_static1"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">品種 :</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalVariety_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">性別 :</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalSex_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">絕育 :</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalSterilization_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">疫苗 :</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="animalBacterin_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">備註:</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="description_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">刊登日期:</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="createdDate_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="col-sm-2 control-label">更新日期:</label>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                            <label class="form-control-static" id="lastModifiedDate_static"></label><br>&ndash;&gt;-->
-<!--                    &lt;!&ndash;                        </div>&ndash;&gt;-->
-<!--&lt;!&ndash;                </div>&ndash;&gt;-->
-<!--&lt;!&ndash;            </div>&ndash;&gt;-->
-<!--            &lt;!&ndash;            <div class="modal-footer">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+<!-- Modal-->
+<div class="modal-body">
+    <div class="container-fluid">
+        <div class="row">
+        </div>
+    </div>
+</div>
+<div class="modal fade bd-example-modal-lg" id="exampleModalCenter" tabindex="-1" role="dialog"
+     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="form-group">
+                    <div class="col">
+                        <img id="imageUrl_static">
+                        <label class="col-sm-2 control-label">會員編號 :</label>
+                        <label class="form-control-static" id="userId_static"></label><br>
+                        <label class="col-sm-2 control-label">動物編號 :</label>
+                        <label class="form-control-static" id="animalId_static"></label><br>
+                        <label class="col-sm-2 control-label">名字 :</label>
+                        <label class="form-control-static" id="animalName_static"></label><br>
+                        <label class="col-sm-2 control-label">物種 :</label>
+                        <label class="form-control-static" id="animalKind_static"></label><br>
+                        <label class="col-sm-2 control-label">品種 :</label>
+                        <label class="form-control-static" id="animalVariety_static"></label><br>
+                        <label class="col-sm-2 control-label">性別 :</label>
+                        <label class="form-control-static" id="animalSex_static"></label><br>
+                        <label class="col-sm-2 control-label">年齡 :</label>
+                        <label class="form-control-static" id="animalAge_static"></label><br>
+                        <label class="col-sm-2 control-label">體型 :</label>
+                        <label class="form-control-static" id="animalBodysize_static"></label><br>
+                        <label class="col-sm-2 control-label">毛色 :</label>
+                        <label class="form-control-static" id="animalColor_static"></label><br>
+                        <label class="col-sm-2 control-label">絕育 :</label>
+                        <label class="form-control-static" id="animalSterilization_static"></label><br>
+                        <label class="col-sm-2 control-label">疫苗 :</label>
+                        <label class="form-control-static" id="animalBacterin_static"></label><br>
+                        <label class="col-sm-2 control-label">地區 :</label>
+                        <label class="form-control-static" id="area_static"></label><br>
+                        <label class="col-sm-2 control-label">備註:</label>
+                        <label class="form-control-static" id="description_static"></label><br>
+                        <label class="col-sm-2 control-label">刊登日期:</label>
+                        <label class="form-control-static" id="createdDate_static"></label><br>
+                        <label class="col-sm-2 control-label">更新日期:</label>
+                        <label class="form-control-static" id="lastModifiedDate_static"></label><br>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 <section id="query_block" class="ftco-appointment ftco-section ftco-no-pt ftco-no-pb img"
          style="background-color: blanchedalmond; display: flex !important; position: static !important;">
@@ -284,26 +279,26 @@
     function getAnimalList(data) {
         $("#test1Result").empty();
         $.each(data["results"], function (index, item) {
-            var html = "<div class='col-md-6 col-lg-3 ftco-animate'>" +
-                "                <div class='staff'>" +
-                "                    <div class='img-wrap d-flex align-items-stretch'>" +
-                "                        <div class='work mb-4 img d-flex align-items-end' style='background-image: url(" + item.imageUrl + ");'>" +
-                "                        </div>" +
-                "                    </div>" +
-                "                    <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>" +
-                "                        <h3 id='" + item.animalId + "'>" + item.animalName + "</h3>" +
-                "                        <div class='faded'>" +
-                "                                <p>物種: " + item.animalKind + "</p>" +
-                "                                <p>品種: " + item.animalVariety + "</p>" +
-                "                                <p>性別: " + item.animalSex + "</p>" +
-                "                                <p>日期: " + item.lastModifiedDate + "</p>" +
-                "                        </div>" +
-                "<button type='button' onclick='getAnimalInfo(this)' class='btn btn-primary' data-toggle='modal' data-target='#exampleModalCenter'>" +
-                "    詳細資料" +
-                "</button>" +
-                "                    </div>" +
-                "                </div>" +
-                "            </div>";
+            var html = `
+<div class='col-md-6 col-lg-3 ftco-animate'>
+    <div class='staff'>
+        <div class='img-wrap d-flex align-items-stretch'>
+            <div class='work mb-4 img d-flex align-items-end' style='background-image: url(${item.imageUrl});'></div>
+        </div>
+        <div class='text pt-3 px-3 pb-4 text-center' style='cursor: pointer;'>
+            <h3 id='${item.animalId}'>${item.animalName}</h3>
+            <div class='faded'>
+                <p>物種: ${item.animalKind}</p>
+                <p>性別: ${item.animalSex}</p>
+                <p>地區: ${item.area}</p>
+                <p>日期: ${item.lastModifiedDate}</p>
+            </div>
+            <button type='button' onclick='getAnimalInfo(this)' class='btn btn-primary' data-toggle='modal' data-target='#exampleModalCenter'>
+            詳細資料
+            </button>
+        </div>
+    </div>
+</div>`;
 
 
             $("#test1Result").append(html);
@@ -329,7 +324,7 @@
         $.getScript('js/main.js');
     }
 
-    function getAnimalInfo(gid) {
+    function getAnimalInfo(gid) {//點擊詳細資料按紐
 
         var id = $(gid).siblings("h3").attr("id");
         console.log(gid);
@@ -338,23 +333,39 @@
             type: "GET",
             url: "/personalAnimals/" + id,
             success: function (data) {
-
-                console.log("會員:" + data.userId +
-                    "\n編號:" + data.animalId +
-                    "\n名字:" + data.animalName +
-                    "\n物種:" + data.animalKind +
-                    "\n品種:" + data.animalVariety +
-                    "\n性別:" + data.animalSex +
-                    "\n年齡:" + data.animalAge +
-                    "\n體型:" + data.animalBodysize +
-                    "\n毛色:" + data.animalColor +
-                    "\n絕育:" + data.animalSterilization +
-                    "\n疫苗:" + data.animalBacterin +
-                    "\n圖片:" + data.imageUrl +
-                    "\n地區:" + data.area +
-                    "\n備註:" + data.description +
-                    "\n刊登日期:" + data.createdDate +
-                    "\n更新日期:" + data.lastModifiedDate);
+                $("#userId_static").text(data.userId);
+                $("#animalId_static").text(data.animalId);
+                $("#animalName_static").text(data.animalName);
+                $("#animalKind_static").text(data.animalKind);
+                $("#animalVariety_static").text(data.animalVariety);
+                $("#animalSex_static").text(data.animalSex);
+                $("#animalAge_static").text(data.animalAge);
+                $("#animalBodysize_static").text(data.animalBodysize);
+                $("#animalColor_static").text(data.animalColor);
+                $("#animalSterilization_static").text(data.animalSterilization);
+                $("#animalBacterin_static").text(data.animalBacterin);
+                $("#area_static").text(data.area);
+                $("#description_static").text(data.description);
+                $("#createdDate_static").text(data.createdDate);
+                $("#lastModifiedDate_static").text(data.lastModifiedDate);
+                $("#imageUrl_static").attr("src", data.imageUrl);
+                // $("animalId_static").text(data.userId);
+                // console.log("會員:" + data.userId +
+                //     "\n編號:" + data.animalId +
+                //     "\n名字:" + data.animalName +
+                //     "\n物種:" + data.animalKind +
+                //     "\n品種:" + data.animalVariety +
+                //     "\n性別:" + data.animalSex +
+                //     "\n年齡:" + data.animalAge +
+                //     "\n體型:" + data.animalBodysize +
+                //     "\n毛色:" + data.animalColor +
+                //     "\n絕育:" + data.animalSterilization +
+                //     "\n疫苗:" + data.animalBacterin +
+                //     "\n圖片:" + data.imageUrl +
+                //     "\n地區:" + data.area +
+                //     "\n備註:" + data.description +
+                //     "\n刊登日期:" + data.createdDate +
+                //     "\n更新日期:" + data.lastModifiedDate);
             }
         });
     }
